--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,8 @@ layout: table_wrappers
       {{ nav_footer_custom }}
     {% else %}
       <footer class="site-footer">
-        Hallo hallo hallo
+        <img src=“/../assets/images/ZEW_logo.jpg“><br>
+        <img src=“/../assets/images/bertelsmann_logo.png“>
       </footer>
     {% endif %}
   </div>
