--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@ layout: table_wrappers
     {% else %}
       <footer class="site-footer">
         <a href="https://www.zew.de/"><img src="../assets/images/ZEW_logo.jpg" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" /></a>
-        <a href="https://www.zew.de/"><img src="../assets/images/bertelsmann_logo.jpg" alt="Bertelsmann Stiftung" /></a>
+        <a href="https://www.zew.de/"><img src="../assets/images/bertelsmann_logo.png" alt="Bertelsmann Stiftung" /></a>
       </footer>
     {% endif %}
   </div>
