--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ layout: table_wrappers
       {{ nav_footer_custom }}
     {% else %}
       <footer class="site-footer">
-        <a href="https://www.zew.de/"><img src="../assets/images/ZEW_logo.jpg" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" /></a>
+        <a href="https://www.zew.de/"><img src="../assets/images/ZEW_logo.jpg" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" height="50%" width="50%" /></a>
         <a href="https://www.zew.de/"><img src="../assets/images/bertelsmann_logo.png" alt="Bertelsmann Stiftung" /></a>
       </footer>
     {% endif %}
