--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ layout: table_wrappers
       {{ nav_footer_custom }}
     {% else %}
       <footer class="site-footer">
-        <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" height="30%" width="30%" /></a> <a href="https://www.bertelsmann-stiftung.de/de/startseite"><img src="../../assets/images/bertelsmann_logo.png" alt="Bertelsmann Stiftung" /></a>
+        <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" height="30%" width="30%" /></a> <a href="https://www.bertelsmann-stiftung.de/de/startseite"><img src="../../assets/images/bertelsmann_logo.png" alt="Bertelsmann Stiftung" width="70%" /></a>
       </footer>
     {% endif %}
   </div>
