--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ layout: table_wrappers
       {{ nav_footer_custom }}
     {% else %}
       <footer class="site-footer">
-        <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" height="25%" width="25%" /></a><img src="../../assets/images/spaceholder.png" alt="" width="5%" /><a href="https://www.bertelsmann-stiftung.de/de/startseite"><img src="../../assets/images/bertelsmann_logo.png" alt="Bertelsmann Stiftung" width="70%" /></a>
+        <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" width="45%" /></a><img src="../../assets/images/spaceholder.png" alt="" width="10%" /><a href="https://www.bertelsmann-stiftung.de/de/startseite"><img src="../../assets/images/Leibniz_Logo_DE_blau_schwarz_500px.png" alt="Bertelsmann Stiftung" width="45%" /></a>
       </footer>
     {% endif %}
   </div>
