--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,8 +94,8 @@ layout: table_wrappers
     {% if nav_footer_custom != "" %}
       {{ nav_footer_custom }}
     {% else %}
-      <footer class="site-footer" style="display: flex; justify-content: center;">
-        <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" width="80%" /></a><img src="../../assets/images/spaceholder.png" alt="" width="20%" /><a href="https://www.bertelsmann-stiftung.de/de/startseite"><img src="../../assets/images/Leibniz_Logo_DE_blau_schwarz_500px.png" alt="Bertelsmann Stiftung" width="80%" /></a>
+      <footer class="site-footer" style="display: flex; align-items: center; justify-content: center;">
+        <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" width="80%" /></a><a href="https://www.bertelsmann-stiftung.de/de/startseite"><img src="../../assets/images/Leibniz_Logo_DE_blau_schwarz_500px.png" alt="Bertelsmann Stiftung" width="80%" /></a>
       </footer>
     {% endif %}
   </div>
