--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@ layout: table_wrappers
     {% if nav_footer_custom != "" %}
       {{ nav_footer_custom }}
     {% else %}
-      <footer class="site-footer" style="display: flex; align-items: flex-start; justify-content: center;">
+      <footer class="site-footer" style="display: flex; align-items: center; justify-content: center;">
         <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" width="60%" /></a><a href="https://www.bertelsmann-stiftung.de/de/startseite"><img src="../../assets/images/Leibniz_Logo_DE_blau_schwarz_500px.png" alt="Bertelsmann Stiftung" width="80%" /></a>
       </footer>
     {% endif %}
