--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+<script type="module" src="/assets/dist/app.js"></script>
