--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ layout: table_wrappers
       {{ nav_footer_custom }}
     {% else %}
       <footer class="site-footer" style="display: flex; align-items: center; justify-content: center;">
-        <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" width="60%" /></a><a href="https://www.leibniz-gemeinschaft.de/"><img src="../../assets/images/Leibniz_Logo_DE_blau_schwarz_500px.png" alt="Bertelsmann Stiftung" width="80%" /></a>
+        <a href="https://www.zew.de/"><img src="../../assets/images/ZEW_Logo_RGB.png" alt="ZEW - Zentrum für Europäische Wirtschaftsforschung" width="60%" /></a><a href="https://www.leibniz-gemeinschaft.de/"><img src="../../assets/images/Leibniz_Logo_DE_blau_schwarz_500px.png" alt="Leibniz-Gemeinschaft" width="80%" /></a>
       </footer>
     {% endif %}
   </div>
